[profile.dev]
split-debuginfo = "unpacked"

[workspace]
members = [
  "associated-token-account/program",
  "associated-token-account/program-test",
  "libraries/*",
  "memo/program",
  "stake-pool/cli",
  "stake-pool/program",
  "token/program",
  "token/program-2022",
  "token-group/interface",
  "token-metadata/interface",
]

exclude = []

resolver = "2"
