[package]
authors = ["Solana Labs Maintainers <maintainers@solanalabs.com>", "Sanctum Labs Maintainers <maintainers@socean.fi>"]
description = "Sanctum-maintained SPL-Stake-Pool Command-line Utility"
edition = "2021"
homepage = "https://spl.solana.com/stake-pool"
license = "Apache-2.0"
name = "spl-stake-pool-cli"
repository = "https://github.com/igneous-labs/sanctum-spl-stake-pool"
version = "1.0.0"

[dependencies]
borsh = "0.10"
clap = "2.33.3"
serde = "1.0.193"
serde_derive = "1.0.130"
serde_json = "1.0.108"
solana-account-decoder = "=1.17.6"
solana-clap-utils = "=1.17.6"
solana-cli-config = "=1.17.6"
solana-cli-output = "=1.17.6"
solana-client = "=1.17.6"
solana-logger = "=1.17.6"
solana-program = "=1.17.6"
solana-remote-wallet = "=1.17.6"
solana-sdk = "=1.17.6"
spl-associated-token-account = { version = "=2.2", path = "../../associated-token-account/program", features = [
    "no-entrypoint",
] }
spl-stake-pool = { version = "=1.0.0", path = "../program", features = [
    "no-entrypoint",
] }
spl-token = { version = "=4.0", path = "../../token/program", features = [
    "no-entrypoint",
] }
spl-token-2022 = { path = "../../token/program-2022", features = [
    "no-entrypoint",
] }
bs58 = "0.4.0"
bincode = "1.3.1"

[[bin]]
name = "stm-stake-pool"
path = "src/main.rs"
